fix #23 score no wrap

--- a/src/main/webapp/resources/css/flags.css
+++ b/src/main/webapp/resources/css/flags.css
@@ -281,3 +281,7 @@ td.flag {
     padding-top: 12px !important;
     width: 25px;
 }
+
+td.score, td.bet{
+    white-space: nowrap;
+}
